--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -58,8 +58,10 @@
                       </div>
                     </details-menu>
                       {{ countwords .Content }} Words
-                    <!-- <span class="file-info-divider"></span>
-                                        {{ .ReadingTime }} min -->
+                    <span class="file-info-divider"></span>
+                                        {{ .ReadingTime }} min
+                   <span class="file-info-divider"></span>
+licensed under {{ .Params.license }} 
 
                   </div>
                   <div class="file-actions flex-order-2 pt-0">
